tests/expectations/parser/program/circuit_deprecated_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'fn', 'final', 'const', 'mapping', 'storage', 'script', 'interface' -- found 'circuit'
    --> test:2:5
     |
   2 |     circuit Foo {
     |     ^^^^^^^
